Added a hard detailed migrations process for predict development. And small quick fixes.

--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ DB_PORT=5432
 DB_USER=myuser
 DB_PASSWORD=mypassword
 DB_NAME=mydb
+DB_SSLMODE=disable
 
 JWT_SECRET=your_secret_change_for_you_purpose
