--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: '1.21.5'
 
+      - name: Tidy Go modules
+        run: go mod tidy
+
       - name: Run tests
         run: go test ./... -coverprofile=coverage.txt -covermode=atomic
 
