Totally updated and rebuild the JWT auth system. Removed deprecated code and start using fresh modules. Separated routes for each new module.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+APPLICATION_NAME=[todo-list-service]
 DEV_PORT=8000
 PAGINATION_LIMIT=20
 CORS_ALLOWED_ORIGINS=*
@@ -10,3 +11,8 @@ DB_NAME=mydb
 DB_SSLMODE=disable
 
 JWT_SECRET=your_secret_change_for_you_purpose
+
+# ----------------------------------Telegram bot messages--------------------------
+TELEGRAM_TOKEN=XXXXXX
+TELEGRAM_CHAT_ID=-XXXXXXX
+# ----------------------------------Telegram bot messages--------------------------
