--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APPLICATION_NAME=[todo-list-service]
 DEV_PORT=8000
 PORT=8002
 PAGINATION_LIMIT=20
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3000, *
 
 #DB_HOST=localhost
 #DB_PORT=5432
